syntax = "proto3";

package user.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "proto/user/v1/user_model.proto";

option go_package = "github.com/choi-yh/example-golang/buf/proto/user.v1";

service UserService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {
    option (google.api.http) = {
      post: "/v1/user/signup"
      body: "*"
    };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
  }
}

message SignUpRequest {
  string email = 1 [(buf.validate.field).string.min_len = 1];
  string password = 2 [(buf.validate.field).string.min_len = 1];
  string name = 3 [(buf.validate.field).string.min_len = 1];
  string phone = 4;
}
message SignUpResponse {
  User user = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}